--- a/challenges/C0/index.html
+++ b/challenges/C0/index.html
@@ -3,14 +3,15 @@
   <head>
     <title>My First Website :)</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="mycss.css">
-    <script type="application/javascript" src="myjs.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script type="application/javascript" src="javascript_code.js"></script>
   </head>
 
   <body>
     <div class="container">
       <header>
-	<h1>Inspect Me</h1>
+	<h1>HTML is Fun!</h1>
+	<h3>Inspector Gadget Thinks So</h3>
       </header>
 
       <button class="tablink" onclick="openTab('tabintro', this, '#222')" id="defaultOpen">What</button>
